...
                    android:paddingVertical="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/black">
                </TextView>

                <EditText
                    android:id="@+id/add_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:background="@color/light_purple"
                    android:paddingVertical="10dp">
                </EditText>
...
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:layout_gravity="center">
                </TextView>

                <TextView
                    android:id="@+id/add_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="yyyy-mm-dd"
                    android:textSize="20sp"
                    android:background="@color/light_purple"
                    android:paddingVertical="10dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5">
                </TextView>

                <Button
                    android:id="@+id/add_pick_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="SET"
                    android:layout_gravity="end|center_vertical"
...
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:layout_gravity="center">
                </TextView>

                <EditText
                    android:id="@+id/add_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="25sp"
                    android:background="@color/light_purple"
                    android:paddingVertical="10dp"
...
                    android:paddingVertical="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/black">
                </TextView>

                <EditText
                    android:id="@+id/add_make"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint=""
                    android:textSize="25sp"
                    android:background="@color/light_purple"
                    android:paddingVertical="10dp">
...
                    android:paddingVertical="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/black">
                </TextView>

                <EditText
                    android:id="@+id/add_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint=""
                    android:textSize="25sp"
                    android:background="@color/light_purple"
                    android:paddingVertical="10dp">
...
                    android:paddingVertical="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/black">
                </TextView>

                <EditText
                    android:id="@+id/add_value"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="$0.00"
                    android:textSize="25sp"
                    android:background="@color/light_purple"
...
                    android:paddingVertical="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/black">
                </TextView>

                <Button
                    android:id="@+id/add_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+">
                </Button>

                <Button
...
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:focusable="true">
        </Button>

        <Button
            android:id="@+id/add_confirm"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CONFIRM"
            android:backgroundTint="@color/light_green"
            android:textColor="@color/black"
...
