<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="182dp">

    </androidx.camera.view.PreviewView>

    <Button
        android:id="@+id/take_picture_button"
        android:layout_width="122dp"
        android:layout_height="59dp"
        android:text="Take Picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back_button_photo"
        android:layout_width="118dp"
        android:layout_height="63dp"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/take_picture_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/swap_camera_button"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:text="Swap camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/take_picture_button" />

</androidx.constraintlayout.widget.ConstraintLayout>