...
        android:focusable="true"
        android:paddingHorizontal="30dp"
        android:text="Scan barcode"
        android:textSize="25sp"></Button>

    <Button
        android:id="@+id/input_manually"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:text="Input manually"
...
